MAJ contenu de la page test

--- a/Partie 1/test.html
+++ b/Partie 1/test.html
@@ -7,6 +7,22 @@
     <title>Ma page web</title>
 </head>
 <body>
-    <h1>Mon super titre de la mort</h1>
+    <h1>Christophe Vallot</h1>
+    <p>À la recherche d'un poste de développeur Web</p>
+    <section>
+        <h2>Mes compétences</h2>
+        <ul>
+            <li>Créer une page web au format HTML</li>
+            <li>Mettre en forme une page en CSS</li>
+            <li>Réaliser des animations CSS</li>
+        </ul>
+    </section>
+    <section>
+        <h2>Ma formation</h2>
+        <ul>
+            <li>2015 : Formation de développeur web</li>
+            <li>2012 : Bac scientifique</li>
+        </ul>
+    </section>
 </body>
 </html>
