Fix: meta viewport

--- a/Partie 1/index.html
+++ b/Partie 1/index.html
@@ -1,41 +1,71 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="utf-8" />
-        <title>Christophe Vallot</title>
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Christophe Vallot</title>
+  </head>
 
-    <body>
-        <h1>Christophe Vallot</h1>
+  <body>
+    <h1>Christophe Vallot</h1>
 
-        <p><a href="photo.jpg"><img src="photo_mini.jpg" alt="Photo d'identité de Christophe Vallot" /></a></p>
-        <p><a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank">Profil Linkedin </a></p>
-        <h2>Mon expérience</h2>
+    <p>
+      <a href="photo.jpg"
+        ><img src="photo_mini.jpg" alt="Photo d'identité de Christophe Vallot"
+      /></a>
+    </p>
+    <p>
+      <a href="https://www.linkedin.com/in/christophe-vallot/" target="_blank"
+        >Profil Linkedin
+      </a>
+    </p>
+    <h2>Mon expérience</h2>
 
-        <ul>
-            <li><strong>De 2000 à 2013</strong> : Formateur en Informatique (bureautique, PAO) et Accompagnateur VAE.</li>
-            <li><strong>De 2007 à 2013</strong> : Formateur et Ingénieur Formation.</li>
-            <li><strong>De 2014 à aujourd'hui</strong> : Formateur et Développeur Web indépendant</li>
-        </ul>
+    <ul>
+      <li>
+        <strong>De 2000 à 2013</strong> : Formateur en Informatique
+        (bureautique, PAO) et Accompagnateur VAE.
+      </li>
+      <li>
+        <strong>De 2007 à 2013</strong> : Formateur et Ingénieur Formation.
+      </li>
+      <li>
+        <strong>De 2014 à aujourd'hui</strong> : Formateur et Développeur Web
+        indépendant
+      </li>
+    </ul>
 
-        <h2>Mes compétences</h2>
+    <h2>Mes compétences</h2>
 
-        <ul>
-            <li>HTML5 et CSS3 (<a href="https://openclassrooms.com/fr/course-certificates/64301436">certificat OpenClassrooms</a>)</li>
-            <li>PHP (<a href="https://openclassrooms.com/fr/course-certificates/41566633">certificat OpenClassrooms</a>)</li>
-            <li>MySQL (<a href="https://openclassrooms.com/fr/course-certificates/7740395596">certificat OpenClassrooms</a>)</li>
-            <li>Impression 3D (FDM et SLA)</li>
-        </ul>
+    <ul>
+      <li>
+        HTML5 et CSS3 (<a
+          href="https://openclassrooms.com/fr/course-certificates/64301436"
+          >certificat OpenClassrooms</a
+        >)
+      </li>
+      <li>
+        PHP (<a
+          href="https://openclassrooms.com/fr/course-certificates/41566633"
+          >certificat OpenClassrooms</a
+        >)
+      </li>
+      <li>
+        MySQL (<a
+          href="https://openclassrooms.com/fr/course-certificates/7740395596"
+          >certificat OpenClassrooms</a
+        >)
+      </li>
+      <li>Impression 3D (FDM et SLA)</li>
+    </ul>
 
-        <h2>Ma formation</h2>
+    <h2>Ma formation</h2>
 
-        <ul>
-            <li>Licence d'Histoire (1995)</li>
-            <li>Diplôme Universitaire de Formateur en Informatique (2000)</li>
-            <li>Master II Ingénierie et Conseil en Formation (2007)</li>
-            <li>Développeur Logiciel (2014)</li>
-            
-        </ul>
-
-    </body>
+    <ul>
+      <li>Licence d'Histoire (1995)</li>
+      <li>Diplôme Universitaire de Formateur en Informatique (2000)</li>
+      <li>Master II Ingénierie et Conseil en Formation (2007)</li>
+      <li>Développeur Logiciel (2014)</li>
+    </ul>
+  </body>
 </html>
